--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,6 +100,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #fff;
+		text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 15pt;
 		font-weight: 300 !important;
